saturn-program-macros/tests/compile_fail/instruction_path_not_namespaced.rs
use saturn_program_macros::saturn_program;

mod instruction {
    #[derive(borsh::BorshSerialize, borsh::BorshDeserialize)]
    pub enum Instr {
        Dummy,
    }
}

#[saturn_program(instruction = "Instr")]
mod handlers {}

fn main() {} 